--- a/_data/organizers.yml
+++ b/_data/organizers.yml
@@ -2,7 +2,7 @@
 
 - name: Sean Marcia
   title: Founder
-  about: Came up with Code for Good, and it would not be possible without his hard work.
+  about: Came up with Python for Good, and it would not be possible without his hard work.
   twitter: seanmarcia
   github: SeanMarcia
   img: assets/img/gallery/sean_thumbnail.jpg
