--- a/_data/constants.yml
+++ b/_data/constants.yml
@@ -5,5 +5,5 @@ dates:
   end: July 30th
   year: "2017"
 address: "Reed College, Portland"
-contact_email: "info@codeforgood.io"
+contact_email: "info@pythonforgood.org"
 cost: $150
