--- a/_data/constants.yml
+++ b/_data/constants.yml
@@ -1,9 +1,9 @@
 ---
 
 dates:
-  start: July 27th
-  end: July 30th
-  year: "2017"
+  start: July 26th
+  end: July 29th
+  year: "2018"
 address: "Reed College, Portland"
 contact_email: "info@pythonforgood.org"
-cost: $150
+cost: $TBD
