--- a/_data/constants.yml
+++ b/_data/constants.yml
@@ -4,6 +4,6 @@ dates:
   start: July 26th
   end: July 29th
   year: "2018"
-address: "Reed College, Portland"
-contact_email: "info@pythonforgood.org"
-cost: $TBD
+address: "PDX Code Guild"
+contact_email: "sean@pythonforgood.org"
+cost: $25
