--- a/_data/constants.yml
+++ b/_data/constants.yml
@@ -4,6 +4,6 @@ dates:
   start: July 26th
   end: July 29th
   year: "2018"
-address: "PDX Code Guild"
+address: "PDX Code Guild - 2828 SW Corbett Ave #208"
 contact_email: "sean@pythonforgood.org"
 cost: $25
